# ted-data-sampler

./: .gitignore  Makefile  README.md  nohup_query_xpaths.txt  pyproject.toml
infra/jupyter_notebook/: docker-compose.yml
input/: pair_xpaths.txt  xpaths_to_query.txt
input/LBR_XML_company_profiles_samples/: company_profile_A5.xml  company_profile_B1201.xml  company_profile_B1212.xml  company_profile_B1306.xml  company_profile_B5005.xml  company_profile_B516.xml  sample descriptions.txt
notebooks/: coverage.ipynb  detect_xpaths.ipynb  xpath_query.ipynb
ted_data_sampler/: __init__.py
ted_data_sampler/core/adapters/: GitHubDownloader.py  XPathValidator.py
ted_data_sampler/core/resources/: xpaths_to_cover.txt
ted_data_sampler/core/services/: detect_eforms.py  download_notices.py  extended_notice_xml_indexer.py  import_eforms_fields.py  load_notices.py  logger.py  pair_xpath_query.py  sample_data.py  sample_data_store.py  xpath_coverage_service.py  xpath_query_service.py
ted_data_sampler/minimal_set/: alg.md
ted_data_sampler/minimal_set/models/: candidate_discovery_result.py  cross_coverage_result.py  gap_filler_result.py  missing_xpath.py
ted_data_sampler/minimal_set/services/: candidate_discovery.py  conditional_xpath_validator.py  cross_coverage.py  gap_filler.py  missing_xpath_loader.py
tests/: __init__.py  conftest.py  test_xpath_validator.py
tests/test_data/: test_xpaths.txt
tests/test_data/test_contract_notices/: 448070-2024.xml  629194-2024.xml
tests/test_data/test_eform_notices/: 00468415_2024.xml  00468603_2024.xml  00468629_2024.xml  00468697_2024.xml  00468740_2024.xml  00468749_2024.xml  00468785_2024.xml  00468788_2024.xml  00468876_2024.xml  00468892_2024.xml
(+10 files in other folders)
