[tool.poetry]
name = "ted-data-sampler"
version = "0.1.0"
description = "Generator of test data sets for Mapping Suites"
authors = ["Meaningfy <hi@meaningfy.ws>"]
readme = "README.md"

# In case of packaging the project into an sdist or a wheel and perhaps publish it to a package index.
package-mode = false

[tool.poetry.dependencies]
python = "^3.9.20"
jupyter = "^1.1.1"
numpy = "<2.0.0"
ted-sws = { git = "https://github.com/OP-TED/ted-rdf-conversion-pipeline.git", rev = "2.0.0-rc.4" }
tqdm = "^4.67.0"
pydantic = "^1.9.0"
pytest = "^8.3.4"

[tool.poetry.scripts]
data-sampler-cli = "ted_data_sampler.core.entrypoints.cmd.data_sampler:main"
data-coverage-cli = "ted_data_sampler.core.entrypoints.cmd.data_coverage:main"
detect-eforms-cli = "ted_data_sampler.core.entrypoints.cmd.detect_eforms:main"
query_xpaths-cli = "ted_data_sampler.core.entrypoints.cmd.query_xpaths:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
